# gr-rebuild

./: .gitignore  LICENSE  README.md  dev.dstack.yml  pyproject.toml
data/: slack_messages_README.md  slack_messages_sample.jsonl
examples/: finetune_example.py
scripts/: generate_sample_slack.py
src/gr_rebuild/: __init__.py  cli.py  datasets.py
src/grr/: __init__.py  cli.py  datasets.py  finetune.py
tests/: __init__.py  test_cli.py
